--- a/NaproKarta.Client/App/src/app/chart/chart.component.html
+++ b/NaproKarta.Client/App/src/app/chart/chart.component.html
@@ -1,12 +1,12 @@
 <mat-card>
   <mat-card-header class="group-box">
     <mat-card-title>
-      <h4>Wybrana Karta: {{chartTitle}} </h4>
+      <h4>Wybrana Karta: {{chart.title}} </h4>
     </mat-card-title>
     <mat-card-subtitle>
       <h6>
         Twoja Notka do tej Karty:
-        <span> {{chartNote}}</span>
+        <span> {{chart.note}}</span>
       </h6>
     </mat-card-subtitle>
     <div class="col-2"></div>
