--- a/NaproKarta.Client/App/src/app/observation/observation-edit/observation-edit.component.html
+++ b/NaproKarta.Client/App/src/app/observation/observation-edit/observation-edit.component.html
@@ -1,5 +1,5 @@
 <p mat-dialog-title class="mat-typography">
-  Nowa obserwacja na dzień RRR-MM-DD
+  Nowa obserwacja na dzień RRR-MM-DD id:{{id}}
 </p>
 <mat-card class="group-box navigation-row">
   <app-date-nav-bar></app-date-nav-bar>
