--- a/NaproKarta.Client/App/src/app/chart/chart-cell/chart-cell.component.html
+++ b/NaproKarta.Client/App/src/app/chart/chart-cell/chart-cell.component.html
@@ -1,4 +1,4 @@
-<table class="group-box" [routerLink]="[ '/observation',3]">
+<table class="group-box" [routerLink]="[ '/observation',observation.id]">
   <tbody style="vertical-align: top">
     <!-- <tr>
       <td>cell
