--- a/NaproKarta.Client/App/src/app/observation/groupBoxes/radio-group-2-columns/radio-group-2-columns.component.html
+++ b/NaproKarta.Client/App/src/app/observation/groupBoxes/radio-group-2-columns/radio-group-2-columns.component.html
@@ -1,7 +1,7 @@
 <!-- <mat-card class="vertical-radio"> -->
 <!-- <div> -->
-<mat-radio-group class="vertical-radio">
-  <mat-radio-button *ngFor="let item of labels" class="radio-element" value={{item}} (click)="passValue(item)"> {{item}} </mat-radio-button>
+<mat-radio-group class="vertical-radio" [value]="radioGroupValue">
+  <mat-radio-button *ngFor="let item of labels" class="radio-element" value={{item}} (click)="emitValue(item)"> {{item}} </mat-radio-button>
 </mat-radio-group>
 <!-- <button mat-raised-button (click)="onClick()">Action</button> -->
 <!-- </div> -->
