--- a/NaproKarta.Client/App/src/app/chart/chart-cell/chart-cell.component.css
+++ b/NaproKarta.Client/App/src/app/chart/chart-cell/chart-cell.component.css
@@ -1,66 +1,65 @@
-table {
-  border: 1px solid rgb(56, 56, 56);
-  /* padding: 0px; */
-  /* margin: 0px; */
-  vertical-align: central;
+.group-box {
+  display: block;
+  height: 12em;
+  width: 4em;
   text-align: center;
+  border: 1px solid rgb(56, 56, 56);
   border-spacing: 0px;
   border-collapse: collapse;
-  /* width: 50px; */
-  /* height: 200px; */
-  height: 10em;
-  width: 5em;
-  /* min-height: 200px; */
-  /* max-height: 200px; */
-  /* min-height: 14.5em; */
-  /* min-width: 50px; */
-  /* max-width: 50px !important; */
-}
-
-table:hover {
-  background-color: #99e699
-}
-
-td {
-  border: 0px solid red;
-  border-spacing: 0px;
-  padding: 0px;
-  margin: 0px;
-  vertical-align: central;
-  text-align: center;
-  /* padding: 0px; */
-  /* min-width: 50px; */
-  /* min-height: 2em; */
-  /* text-height:90%; */
-  font-size: 90%;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-img {
-  /* width: 50px !important; */
-  /* max-width: 50px !important; */
-  height: auto;
-  width: auto;
-  /* height: 100%;
-  width: 100%; */
-}
-
-.date {
-  height: 1.5em;
-  vertical-align: central;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  background-color: burlywood;
-  border-radius: 10px;
 }
 
 .marker {
-  /* background-color: beige;*/
+  display: block;
+  height: 5em;
+  width: 4em;
   padding: 0px;
   margin: 0px;
-  height: 80px;
-  width: 50px;
   background-size: 100% 100%;
-  /* min-width: 50px !important;*/
-  /* height: auto; */
 }
+
+.peak-number {
+  height: auto;
+  width: auto;
+}
+
+td {
+  /* font-size: 90%; */
+  line-height: 100%;
+  display: block;
+  width: 4em;
+}
+
+.date {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  border-spacing: 0px;
+  background-color: burlywood;
+  border-radius: 10px;
+  display: block;
+  height: 1.2em;
+}
+
+span {
+  margin-left: 0.1em;
+  margin-right: 0.1em;
+  /* dfd */
+}
+
+.note-imoprtant {
+  background-color: rgb(255, 0, 0);
+  padding: 0.1em;
+  border-radius: 50%;
+}
+
+/* .zoom {
+  -moz-transition: all 1s;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.zoom:hover {
+  margin-right: 1em;
+  -moz-transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
+} */
