--- a/NaproKarta.Client/App/src/app/chart/chart-cycle/chart-cycle.component.html
+++ b/NaproKarta.Client/App/src/app/chart/chart-cycle/chart-cycle.component.html
@@ -8,7 +8,7 @@
   </tr> -->
   <tr>
     <td *ngFor="let item of observations; let i=index">
-      <app-chart-cell [observation]='item'>
+      <app-chart-cell [observation]='item' [fromChartId]='fromChartId'>
         <!-- [numberInCycle]='i' -->
       </app-chart-cell>
     </td>
