--- a/NaproKarta.Client/App/src/app/chart/chart-update-dialog/chart-update-dialog.component.html
+++ b/NaproKarta.Client/App/src/app/chart/chart-update-dialog/chart-update-dialog.component.html
@@ -13,5 +13,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-raised-button mat-dialog-close color="primary" class="btn">Anuluj</button>
-  <button mat-raised-button color="primary" class="btn" (click)='ModifyChart()'>Zapisz</button>
+  <button mat-raised-button color="primary" class="btn" (click)='UpdateChart()'>Zapisz</button>
 </mat-dialog-actions>
