--- a/NaproKarta.Client/App/src/app/my-core/nav-bar/nav-bar.component.css
+++ b/NaproKarta.Client/App/src/app/my-core/nav-bar/nav-bar.component.css
@@ -3,7 +3,7 @@
   /* width: 50px; */
   /* border-radius: 50%; */
   /* border: 5px solid black; */
-  margin: auto;
+  margin-right: 1em;
   -webkit-animation: rotateY 5s infinite linear;
   animation: rotateY 5s infinite linear;
 }
@@ -18,4 +18,17 @@
   to {
     transform: rotateY(360deg);
   }
+}
+
+.zoom {
+  -moz-transition: all 1s;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.zoom:hover {
+  margin-right: 1em;
+  -moz-transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
 }
