--- a/NaproKarta.Client/App/src/app/observation/observation-edit/observation-edit.component.html
+++ b/NaproKarta.Client/App/src/app/observation/observation-edit/observation-edit.component.html
@@ -49,6 +49,18 @@ obs id{{observation.id}}
   </mat-card>
 </div>
 
+<div class="right-column">
+  <mat-card class="group-box">
+    <mat-card-header>
+      <mat-card-subtitle>Zdjecie</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <img src="http://placehold.it/250" class="img-fluid|thumbnail rounded-top|rounded-right|rounded-bottom|rounded-left|rounded-circle|"
+        alt="">
+    </mat-card-content>
+  </mat-card>
+</div>
+
 <!-- buttons -->
 <mat-card>
   <mat-card-actions class="bottom-buttons">
