--- a/NaproKarta.Client/App/src/app/chart/chart-cell/chart-cell.component.2.css
+++ b/NaproKarta.Client/App/src/app/chart/chart-cell/chart-cell.component.2.css
@@ -1,16 +1,11 @@
-a {
-  color: black;
-  text-decoration: none;
-}
-
 .group-box {
   display: block;
   height: 12em;
-  width: 4em;
+  width: 4.1em;
   text-align: center;
   border: 1px solid rgb(56, 56, 56);
-  border-spacing: 0px;
-  border-collapse: collapse;
+  /* border-spacing: 0px; */
+  /* border-collapse: collapse; */
 }
 
 .marker {
@@ -27,7 +22,7 @@ a {
   width: auto;
 }
 
-.tdd {
+td {
   /* font-size: 90%; */
   line-height: 1em;
   display: block;
