--- a/NaproKarta.Client/App/src/app/chart/chart.component.html
+++ b/NaproKarta.Client/App/src/app/chart/chart.component.html
@@ -21,7 +21,7 @@
         <table>
           <tr *ngFor="let item of cycles; let i=index">
             <td>
-              <app-chart-cycle [cycle]='item' [numberInChart]='i' [fromChartId]='chart.id'></app-chart-cycle>
+              <app-chart-cycle [cycle]='item'></app-chart-cycle>
             </td>
           </tr>
         </table>
