--- a/NaproKarta.Client/App/src/app/my-core/nav-bar/nav-bar.component.html
+++ b/NaproKarta.Client/App/src/app/my-core/nav-bar/nav-bar.component.html
@@ -25,7 +25,7 @@
               <button mat-raised-button color="primary" class="btn btn-secondary dropdown-toggle zoom" type="button" id="dropdownMenuButton"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Wybierz karte </button>
-              <div class="dropdown-menu zoom" aria-labelledby="dropdownMenuButton">
+              <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
                 <a *ngFor="let chartIdAndTitle of chartIdsAndTitles" class="dropdown-item" [id]='chartIdAndTitle.id' (click)='RefreshChart(chartIdAndTitle.id)'>
                   {{chartIdAndTitle.title}}
                 </a>
