--- a/NaproKarta.Client/App/src/app/observation/groupBoxes/radio-group-2-columns/radio-group-2-columns.component.css
+++ b/NaproKarta.Client/App/src/app/observation/groupBoxes/radio-group-2-columns/radio-group-2-columns.component.css
@@ -1,11 +1,20 @@
 .vertical-radio {
   display: block;
-  width: 16.5em;
+  width: 11.0em;
+  /* height: 9.0em; */
+  /* background-color: aquamarine */
 }
 
-.radio-element {
+.radio-element:nth-child(even) {
+  /* background-color: blueviolet; */
   display: inline-block;
   width: 4em;
-  margin-left: 1.5em;
-  margin-right: 1.5em;
+  margin-left: 1em;
+}
+
+.radio-element:nth-child(odd) {
+  /* background-color: rgb(226, 43, 113); */
+  display: inline-block;
+  width: 4em;
+  margin-right: 1em;
 }
